
[package]
name = "w3kit"
version = "0.1.2"
edition = "2021"
license = "MIT"
description="A toolkit for the blockchains."

[dependencies]
reqwest = "0.11.10"
web3 = "0.18.0"
once_cell = "1.13.1"
comfy-table = "6.0.0"
serde = { version="1.0.144", features=["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
ethers = {version = "1.0.2", git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls", "abigen"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }



