[package]
name = "web3-toolkit-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.10"
web3 = "0.18.0"
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls", "abigen"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }

